--- a/index.html
+++ b/index.html
@@ -524,6 +524,8 @@
                     its so weird because you were just supposed to be a friend i wasn't crushing or planning anything but out of nowhere something shifted i started noticing you too much and every time i open that app i always look to see if your online.
                     <br><br>
                     i keep noticing how cute your personality is and how nice you are to people and when i saw you for the first time i made me fall even harder and I just wanted to say that I like you.
+                    <br><br>
+                     And im not expecting anything from this i just wanted to get this off my chest and hope my feeling will go away on their own 
                 </div>
             </div>
             <button class="btn" id="restartBtn">Start Over ♥</button>
