--- a/index.html
+++ b/index.html
@@ -531,6 +531,10 @@
             <button class="btn" id="restartBtn">Start Over ♥</button>
         </div>
     </div>
+
+      <div class="audio-btn" id="audioBtn">
+        <i class="fas fa-music"></i>
+    </div>
     
     <audio id="bgMusic" loop preload="auto" volume="0.7">
         <source src="b1oceqg59r.mp3" type="audio/mp3">
