--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -531,8 +532,9 @@
             <button class="btn" id="restartBtn">Start Over ♥</button>
         </div>
     </div>
-
-      <div class="audio-btn" id="audioBtn">
+    
+    <!-- Audio Button -->
+    <div class="audio-btn" id="audioBtn">
         <i class="fas fa-music"></i>
     </div>
     
